--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,8 @@ footer:
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
+  - title: envelope-o
+    url: mailto:nuno.xu@gmail.com
   - title: facebook
     url: https://www.facebook.com/Nuno.Xu
   - title: github
