--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Nuno Xu
 email: nuno.xu@gmail.com
 url: https://nunoxu.github.io
 description: "Nuno Xu's Personal Website to showcase projects and background."
-skills: "MSc Student in Computer Science @ IST"
+skills: "Software Enginneer @ Chilltime"
 meta_author: Xu Nuno
 
 # Google webmaster tools
